--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ rand = "0.8.5"
 hmac = "0.12.1"
 sha2 = "0.10.8"
 hex = "0.4.3"
+wasm-bindgen-futures = "0.4.42"
 getrandom = { version = "0.2", features = ["js"] }
 
