--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ rand = "0.8.5"
 hmac = "0.12.1"
 sha2 = "0.10.8"
 hex = "0.4.3"
+serde = { version = "1.0.130", features = ["derive"] }
 wasm-bindgen-futures = "0.4.42"
+serde-wasm-bindgen = "0.6.5"
 getrandom = { version = "0.2", features = ["js"] }
 
